# PortfolioDataProjects

.github/workflows/: cfia-pipeline.yml
CFIA Food Recalls Project/: .gitignore  README.md  cfia_01_extracting.py  cfia_02_transforming.py  cfia_03_loading.py  cfia_run_pipeline.py  pyproject.toml
CFIA Food Recalls Project/.github/workflows/: cfia-pipeline.yml
CFIA Food Recalls Project/SQLServerScripts/: create_database_CFIA_Recalls.sql  create_table_FoodRecalls.sql
CFIA Food Recalls Project/recalls/: cfia_food_recalls.csv  processed_cfia_food_recalls.csv
XTrade Sales Analysis Project/: XTrade Sales Analysis Report.xlsx
